--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .vscode
 
-
 devel/
 logs/
 build/
@@ -52,3 +51,5 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+!/AssigmentFiles/marble_contact_plugin/**/*
