--- a/src/ai/package.xml
+++ b/src/ai/package.xml
@@ -58,6 +58,9 @@
   <exec_depend>gazebo</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>roslib</exec_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
