--- a/src/vis/CMakeLists.txt
+++ b/src/vis/CMakeLists.txt
@@ -8,9 +8,10 @@ project(vis)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  OpenCV
   roscpp
 )
+
+find_package( OpenCV REQUIRED )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -108,8 +109,6 @@ catkin_package(
 #  DEPENDS system_lib
 )
 
-include_directories( ${OpenCV_INCLUDE_DIRS} )
-
 ###########
 ## Build ##
 ###########
@@ -119,6 +118,7 @@ include_directories( ${OpenCV_INCLUDE_DIRS} )
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -149,9 +149,9 @@ add_executable(${PROJECT_NAME}_node src/vis_node.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+)
 target_link_libraries(${PROJECT_NAME}_node ${OpenCV_LIBS} )
 
 #############
