--- a/src/vis/CMakeLists.txt
+++ b/src/vis/CMakeLists.txt
@@ -9,6 +9,7 @@ project(vis)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  cv_bridge
 )
 
 find_package( OpenCV REQUIRED )
