--- a/src/vis/package.xml
+++ b/src/vis/package.xml
@@ -51,10 +51,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>opencv</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <build_export_depend>opencv</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
   <exec_depend>opencv</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
