--- a/src/robot/CMakeLists.txt
+++ b/src/robot/CMakeLists.txt
@@ -71,7 +71,7 @@ add_service_files(FILES Position.srv)
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
-  std_msgs  # Or other packages containing msgs
+  #std_msgs  # Or other packages containing msgs
   geometry_msgs
 )
 
