--- a/src/robot/CMakeLists.txt
+++ b/src/robot/CMakeLists.txt
@@ -141,6 +141,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/robot_node.cpp)
+add_executable(${PROJECT_NAME}_constant_target_node src/robot_constant_target_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
