--- a/src/reinforcement_learning/package.xml
+++ b/src/reinforcement_learning/package.xml
@@ -52,6 +52,9 @@
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
+  <build_depend>roslib</build_depend>
+  <build_export_depend>roslib</build_export_depend>
+  <exec_depend>roslib</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
