--- a/src/rob/CMakeLists.txt
+++ b/src/rob/CMakeLists.txt
@@ -135,9 +135,9 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/rob_node.cpp)
-file (NAV_SRC glob
+#file (NAV_SRC glob
 
-)
+#)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
