--- a/src/reinforcement_learning/CMakeLists.txt
+++ b/src/reinforcement_learning/CMakeLists.txt
@@ -135,7 +135,11 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/reinforcement_learning_node.cpp src/agent.cpp src/state.cpp src/agent.h src/state.h src/envoriment.h src/envoriment.cpp)
+file (GLOB SOURCES
+  src/*.h
+  src/*.cpp
+)
+add_executable(${PROJECT_NAME}_node ${SOURCES})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
