--- a/src/rob/CMakeLists.txt
+++ b/src/rob/CMakeLists.txt
@@ -143,6 +143,13 @@ file (GLOB NAV_SRC
 )
 add_executable(${PROJECT_NAME}_navigation_node ${NAV_SRC})
 
+file (GLOB LOC_SRC
+    src/localization/*.cpp
+    src/localization/*.h
+)
+add_executable(${PROJECT_NAME}_localization_node ${LOC_SRC})
+
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -155,6 +162,7 @@ add_executable(${PROJECT_NAME}_navigation_node ${NAV_SRC})
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(${PROJECT_NAME}_navigation_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_localization_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
@@ -163,8 +171,12 @@ add_dependencies(${PROJECT_NAME}_navigation_node ${${PROJECT_NAME}_EXPORTED_TARG
 target_link_libraries(${PROJECT_NAME}_navigation_node
   ${catkin_LIBRARIES}
 )
+target_link_libraries(${PROJECT_NAME}_localization_node
+  ${catkin_LIBRARIES}
+)
 
 target_link_libraries(${PROJECT_NAME}_navigation_node ${OpenCV_LIBS} )
+target_link_libraries(${PROJECT_NAME}_localization_node ${OpenCV_LIBS} )
 
 #############
 ## Install ##
