--- a/src/rob/package.xml
+++ b/src/rob/package.xml
@@ -58,6 +58,9 @@
   <build_depend>message_filters</build_depend>
   <build_export_depend>message_filters</build_export_depend>
   <exec_depend>message_filters</exec_depend>
+  <build_depend>gazebo_msgs</build_depend>
+  <build_export_depend>gazebo_msgs</build_export_depend>
+  <exec_depend>gazebo_msgs</exec_depend>
   
 
 
